# rsat

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml  rustdoc.yml
src/: common.rs  lib.rs  main.rs  msat.rs  parser.rs  sls.rs
src/cdcl/: clause_db.rs  drat_clauses.rs  mod.rs  solver.rs  solver_options.rs  trail.rs  var_manager.rs
src/msat/: clause_db.rs  mod.rs  trail.rs  var_manager.rs
src/sls/: mod.rs
