[package]
name = "rsat"
version = "0.1.0"
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
edition = "2018"
description = """
SolHOP SAT and MaxSAT Solver
"""
documentation = "https://docs.rs/rsat/"
homepage = "https://docs.rs/crate/rsat/"
repository = "https://github.com/solhop/rsat"
readme = "README.md"
keywords = ["SAT", "MaxSAT", "Satisfiability", "Solver", "Math"]
categories = ["science"]
license = "MIT"
exclude = ["/.vscode/", "/.github/", "azure-pipelines.yml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1"
rand = "0.7"
clap = "2.33.0"
