[package]
name = "rsat"
version = "0.1.8"
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
edition = "2018"
description = """
SolHOP SAT Solver
"""
documentation = "https://docs.rs/rsat/"
homepage = "https://docs.rs/crate/rsat/"
repository = "https://github.com/solhop/rsat"
readme = "README.md"
keywords = ["SAT", "Boolean", "Satisfiability", "Solver", "Math"]
categories = ["science"]
license = "MIT"
exclude = ["/.vscode/", "/.github/"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1.3"
rand = "0.7"
rayon = "1.2"
error-chain = "0.12"
structopt = "0.3"
