[package]
name = "rsat"
version = "0.1.12"
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
edition = "2018"
description = """
SAT Solver
"""
documentation = "https://docs.rs/rsat/"
homepage = "https://solhop.netlify.app/rsat"
repository = "https://github.com/solhop/rsat"
readme = "README.md"
keywords = ["SAT", "Boolean", "Satisfiability", "Solver", "Math"]
categories = ["science"]
license = "MIT"
exclude = ["/.vscode/", "/.github/"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
solhop-types = "=0.1.0"
rand = "0.7"
rayon = "1.4"
